# ML_Deployment

./: README.md  app.py  pyproject.toml
models/: dec_tree.joblib  lgbm_model.joblib
notebooks/: app-prod.ipynb  eda.ipynb  ml.ipynb  preprocessing.ipynb
